BTL/BTL4/initial/src/main/d96/parser/.antlr/D96Parser.py
# Generated from d:\My_Stuff\PPL\BTL\BTL3\initial\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'!'", "'&&'", "'||'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'Array'", "'Int'", 
                     "'Float'", "'True'", "'False'", "'Boolean'", "'String'", 
                     "'Null'", "'Class'", "'Break'", "'Continue'", "'If'", 
                     "'Elseif'", "'Else'", "'Foreach'", "'Val'", "'Var'", 
                     "'Constructor'", "'Destructor'", "'Return'", "'Self'", 
                     "'New'", "'In'", "'By'", "'::'", "':'", "','", "';'", 
                     "'..'", "'.'", "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "BIN", "OCT", "DEC", "HEX", 
                      "ZERO", "FLOATLIT", "STRINGLIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "BCOMMENT", "STR", "RELOP", "NOTOP", 
                      "ANDOP", "OROP", "ASSOP", "ADDOP", "MINOP", "MULOP", 
                      "DIVOP", "REMOP", "ARRAY", "INT", "FLOAT", "TRUE", 
                      "FALSE", "BOOLEAN", "STRING", "NULL", "CLASS", "BREAK", 
                      "CONTINUE", "IF", "ELSEIF", "ELSE", "FOREACH", "VAL", 
                      "VAR", "CONSTRUCTOR", "DESTRUCTOR", "RETURN", "SELF", 
                      "NEW", "IN", "BY", "DCOLON", "COLON", "COMMA", "SEMI", 
                      "DDOT", "DOT", "LB", "RB", "LP", "RP", "LC", "RC", 
                      "DOLLARID", "ID", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_bclass = 1
    RULE_class_body = 2
    RULE_class_stmt = 3
    RULE_id_vas = 4
    RULE_id_va = 5
    RULE_valdecl = 6
    RULE_vardecl = 7
    RULE_funcdecl = 8
    RULE_constructor = 9
    RULE_destructor = 10
    RULE_param = 11
    RULE_paramlist = 12
    RULE_bidlist = 13
    RULE_idlist = 14
    RULE_valuelist = 15
    RULE_blockstmt = 16
    RULE_stmtlist = 17
    RULE_stmt = 18
    RULE_semi_stmt = 19
    RULE_block_id_vas = 20
    RULE_block_id_va = 21
    RULE_bvaldecl = 22
    RULE_bvardecl = 23
    RULE_lhs = 24
    RULE_index_lhs = 25
    RULE_varass = 26
    RULE_func = 27
    RULE_dollarfunc = 28
    RULE_funccall = 29
    RULE_foreachstmt = 30
    RULE_ifstmt = 31
    RULE_ifpart = 32
    RULE_elseif_part = 33
    RULE_rcb = 34
    RULE_datatype = 35
    RULE_dttype = 36
    RULE_dttyp = 37
    RULE_expr = 38
    RULE_term1 = 39
    RULE_term2 = 40
    RULE_term3 = 41
    RULE_term4 = 42
    RULE_term5 = 43
    RULE_term6 = 44
    RULE_term7 = 45
    RULE_index_operators = 46
    RULE_term8 = 47
    RULE_term9 = 48
    RULE_term10 = 49
    RULE_literal = 50
    RULE_arrayCell = 51

    ruleNames =  [ "program", "bclass", "class_body", "class_stmt", "id_vas", 
                   "id_va", "valdecl", "vardecl", "funcdecl", "constructor", 
                   "destructor", "param", "paramlist", "bidlist", "idlist", 
                   "valuelist", "blockstmt", "stmtlist", "stmt", "semi_stmt", 
                   "block_id_vas", "block_id_va", "bvaldecl", "bvardecl", 
                   "lhs", "index_lhs", "varass", "func", "dollarfunc", "funccall", 
                   "foreachstmt", "ifstmt", "ifpart", "elseif_part", "rcb", 
                   "datatype", "dttype", "dttyp", "expr", "term1", "term2", 
                   "term3", "term4", "term5", "term6", "term7", "index_operators", 
                   "term8", "term9", "term10", "literal", "arrayCell" ]

    EOF = Token.EOF
    INTLIT=1
    BIN=2
    OCT=3
    DEC=4
    HEX=5
    ZERO=6
    FLOATLIT=7
    STRINGLIT=8
    UNCLOSE_STRING=9
    ILLEGAL_ESCAPE=10
    BCOMMENT=11
    STR=12
    RELOP=13
    NOTOP=14
    ANDOP=15
    OROP=16
    ASSOP=17
    ADDOP=18
    MINOP=19
    MULOP=20
    DIVOP=21
    REMOP=22
    ARRAY=23
    INT=24
    FLOAT=25
    TRUE=26
    FALSE=27
    BOOLEAN=28
    STRING=29
    NULL=30
    CLASS=31
    BREAK=32
    CONTINUE=33
    IF=34
    ELSEIF=35
    ELSE=36
    FOREACH=37
    VAL=38
    VAR=39
    CONSTRUCTOR=40
    DESTRUCTOR=41
    RETURN=42
    SELF=43
    NEW=44
    IN=45
    BY=46
    DCOLON=47
    COLON=48
    COMMA=49
    SEMI=50
    DDOT=51
    DOT=52
    LB=53
    RB=54
    LP=55
    RP=56
    LC=57
    RC=58
    DOLLARID=59
    ID=60
    WS=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def bclass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.BclassContext)
            else:
                return self.getTypedRuleContext(D96Parser.BclassContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 104
                self.bclass()
                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 109
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BclassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def class_body(self):
            return self.getTypedRuleContext(D96Parser.Class_bodyContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_bclass




    def bclass(self):

        localctx = D96Parser.BclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_bclass)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(D96Parser.CLASS)
                self.state = 112
                self.match(D96Parser.ID)
                self.state = 113
                self.match(D96Parser.COLON)
                self.state = 114
                self.match(D96Parser.ID)
                self.state = 115
                self.class_body()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(D96Parser.CLASS)
                self.state = 117
                self.match(D96Parser.ID)
                self.state = 118
                self.class_body()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def class_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_stmtContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_stmtContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_class_body




    def class_body(self):

        localctx = D96Parser.Class_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_body)
        self._la = 0 # Token type
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(D96Parser.LP)
                self.state = 123 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 122
                    self.class_stmt()
                    self.state = 125 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.DOLLARID) | (1 << D96Parser.ID))) != 0)):
                        break

                self.state = 127
                self.match(D96Parser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(D96Parser.LP)
                self.state = 130
                self.match(D96Parser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(D96Parser.FuncdeclContext,0)


        def valdecl(self):
            return self.getTypedRuleContext(D96Parser.ValdeclContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def vardecl(self):
            return self.getTypedRuleContext(D96Parser.VardeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_stmt




    def class_stmt(self):

        localctx = D96Parser.Class_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_stmt)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.destructor()
                pass
            elif token in [D96Parser.DOLLARID, D96Parser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.funcdecl()
                pass
            elif token in [D96Parser.VAL]:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.valdecl()
                self.state = 137
                self.match(D96Parser.SEMI)
                pass
            elif token in [D96Parser.VAR]:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.vardecl()
                self.state = 140
                self.match(D96Parser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_vasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_va(self):
            return self.getTypedRuleContext(D96Parser.Id_vaContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_id_vas




    def id_vas(self):

        localctx = D96Parser.Id_vasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_id_vas)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            _la = self._input.LA(1)
            if not(_la==D96Parser.DOLLARID or _la==D96Parser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 145
            self.id_va()

            self.state = 146
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_vaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def id_va(self):
            return self.getTypedRuleContext(D96Parser.Id_vaContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def expr(self):
            return self.getTypedRuleContext(D96Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def dttyp(self):
            return self.getTypedRuleContext(D96Parser.DttypContext,0)


        def ASSOP(self):
            return self.getToken(D96Parser.ASSOP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_id_va




    def id_va(self):

        localctx = D96Parser.Id_vaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_id_va)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(D96Parser.COMMA)
                self.state = 149
                _la = self._input.LA(1)
                if not(_la==D96Parser.DOLLARID or _la==D96Parser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 150
                self.id_va()

                self.state = 151
                self.expr()
                self.state = 152
                self.match(D96Parser.COMMA)
                pass
            elif token in [D96Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.match(D96Parser.COLON)
                self.state = 155
                self.dttyp()
                self.state = 156
                self.match(D96Parser.ASSOP)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def idlist(self):
            return self.getTypedRuleContext(D96Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def dttyp(self):
            return self.getTypedRuleContext(D96Parser.DttypContext,0)


        def id_vas(self):
            return self.getTypedRuleContext(D96Parser.Id_vasContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_valdecl




    def valdecl(self):

        localctx = D96Parser.ValdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_valdecl)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(D96Parser.VAL)
                self.state = 161
                self.idlist()
                self.state = 162
                self.match(D96Parser.COLON)
                self.state = 163
                self.dttyp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(D96Parser.VAL)
                self.state = 166
                self.id_vas()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def idlist(self):
            return self.getTypedRuleContext(D96Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def dttyp(self):
            return self.getTypedRuleContext(D96Parser.DttypContext,0)


        def id_vas(self):
            return self.getTypedRuleContext(D96Parser.Id_vasContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_vardecl




    def vardecl(self):

        localctx = D96Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardecl)
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.match(D96Parser.VAR)
                self.state = 170
                self.idlist()
                self.state = 171
                self.match(D96Parser.COLON)
                self.state = 172
                self.dttyp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(D96Parser.VAR)
                self.state = 175
                self.id_vas()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(D96Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(D96Parser.BlockstmtContext,0)


        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = D96Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.state = 188
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                _la = self._input.LA(1)
                if not(_la==D96Parser.DOLLARID or _la==D96Parser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 179
                self.match(D96Parser.LB)
                self.state = 180
                self.paramlist()
                self.state = 181
                self.match(D96Parser.RB)
                self.state = 182
                self.blockstmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 184
                _la = self._input.LA(1)
                if not(_la==D96Parser.DOLLARID or _la==D96Parser.ID):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 185
                self.match(D96Parser.LB)
                self.state = 186
                self.match(D96Parser.RB)
                self.state = 187
                self.blockstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(D96Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(D96Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor




    def constructor(self):

        localctx = D96Parser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constructor)
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 190
                self.match(D96Parser.CONSTRUCTOR)
                self.state = 191
                self.match(D96Parser.LB)
                self.state = 192
                self.paramlist()
                self.state = 193
                self.match(D96Parser.RB)
                self.state = 194
                self.blockstmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.match(D96Parser.CONSTRUCTOR)
                self.state = 197
                self.match(D96Parser.LB)
                self.state = 198
                self.match(D96Parser.RB)
                self.state = 199
                self.blockstmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestructorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESTRUCTOR(self):
            return self.getToken(D96Parser.DESTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstmt(self):
            return self.getTypedRuleContext(D96Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_destructor




    def destructor(self):

        localctx = D96Parser.DestructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_destructor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self.match(D96Parser.DESTRUCTOR)
            self.state = 203
            self.match(D96Parser.LB)
            self.state = 204
            self.match(D96Parser.RB)
            self.state = 205
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bidlist(self):
            return self.getTypedRuleContext(D96Parser.BidlistContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def dttyp(self):
            return self.getTypedRuleContext(D96Parser.DttypContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_param




    def param(self):

        localctx = D96Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 207
            self.bidlist()
            self.state = 208
            self.match(D96Parser.COLON)
            self.state = 209
            self.dttyp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(D96Parser.ParamContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def paramlist(self):
            return self.getTypedRuleContext(D96Parser.ParamlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_paramlist




    def paramlist(self):
